# fleetlab

./: Makefile  pyproject.toml
docs/: architecture.md  charter.md  experiments.md  implementation-notes.md  integration.md  interfaces.md  milestones.md  non-goals.md  observability.md  oss-opportunities.md  risks.md  scope.md  security.md  tasks.md  testing.md
docs/adr/: 0001-stack-and-simulator-style.md  0002-fitting-method.md  0003-signal-comparison-design.md
docs/notes/: dynamics-method.md  fitting-method.md  model-validation.md
fleetlab/: __init__.py  cli.py
fleetlab/cost/: __init__.py  build_cost_report.py  model.py
fleetlab/dynamics/: __init__.py  build_scenarios.py  cold_start.py  headroom.py  scaling.py  simulator.py
fleetlab/emit/: __init__.py  build_recommendation.py  dry_run_validate.py  recommendation.py  topology.py
fleetlab/fitting/: __init__.py  build_profiles.py  capacity.py  corpus.py  holdout.py  latency.py
fleetlab/ingest/: __init__.py  bundle.py  errors.py  loaders.py  validate.py
fleetlab/models/: __init__.py  arrival.py  kv_memory.py  length.py  littles_law.py  token_rate.py
fleetlab/placement/: __init__.py  build_placement_report.py  model.py
fleetlab/signals/: __init__.py  build_signal_comparison.py  detection.py  ground_truth.py  series.py
profiles/cost/: README.md
profiles/examples/: README.md  cost-g5-xlarge-ondemand.json  hardware-a10g-g5-xlarge.json  model-qwen2.5-1.5b-instruct-gguf-q4km.json
reports/: autoscaling-signals.md  cold-start-headroom.md  cost-model.md  holdout-validation.md  limitations.md  placement.md
(+67 files in other folders)
