[project]
name = "fleetlab"
version = "0.1.0"
description = "Explainable capacity, autoscaling, cost, and heterogeneous-placement simulation for LLM inference fleets. Files in -> models -> files out. Simulation != production."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26,<3",
    "jsonschema>=4.18,<5",
    "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["fleetlab*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
